--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -21,22 +21,21 @@ jobs:
           git submodule update --init --recursive --progress
           make build
           cp dist/* docker/.
-      # Build a special version of linuxserver FreeCAD Docker container.
-      - name: Login to Docker Registry
-	uses: docker/login-action@v3
-	with:
-	  registry: ${{ vars.REGISTRYHOST }}
-	  username: ${{ vars.REGISTRYUSER }}
-	  password: ${{ inputs.registrypassword }}
+      - name: Login to Docker Registry # Build a special version of linuxserver FreeCAD Docker container.
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ vars.REGISTRYHOST }}
+          username: ${{ vars.REGISTRYUSER }}
+          password: ${{ inputs.registrypassword }}
       - name: Set up Docker Buildx
-	uses: https://github.com/docker/setup-buildx-action@v3
+        uses: https://github.com/docker/setup-buildx-action@v3
       - name: Build and push Docker image
-	uses: https://github.com/docker/build-push-action@v5
-	with:
-	  context: docker/docker-freecad/
-	  file: ./Dockerfile
-	  push: true
-	  tags: gitea.tu.tsolo.net/tsolo/tsolo-freecad:1.0
+        uses: https://github.com/docker/build-push-action@v5
+        with:
+          context: docker/docker-freecad/
+          file: ./Dockerfile
+          push: true
+          tags: gitea.tu.tsolo.net/tsolo/tsolo-freecad:1.0
       # End of the build
       - name: Make containers and publish
         uses: https://gitea.tu.tsolo.net/Tsolo/container-build-publish-action@main
