--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           registry: ${{ vars.REGISTRYHOST }}
           username: ${{ vars.REGISTRYUSER }}
-          password: ${{ inputs.registrypassword }}
+          password: ${{ secrets.REGISTRYPASSWORD }}
       - name: Set up Docker Buildx
         uses: https://github.com/docker/setup-buildx-action@v3
       - name: Build and push Docker image
