--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -32,8 +32,8 @@ jobs:
       - name: Build and push Docker image
         uses: https://github.com/docker/build-push-action@v5
         with:
-          context: docker/docker-freecad/
-          file: ./Dockerfile
+          context: ./docker/docker-freecad/
+          # file: ./Dockerfile
           push: true
           tags: gitea.tu.tsolo.net/tsolo/tsolo-freecad:1.0
       # End of the build
