fix: Add license info

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Tsolo.io
+#
+# SPDX-License-Identifier: Apache-2.0
+
 FROM tsolo.io/local/tsolo-freecad:1.0
 COPY cycax-freecad-worker.sh /app
 RUN apt-get update; apt-get install -y xz-utils
