--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Tsolo.io
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [submodule "docker/-f"]
 	path = docker/-f
 	url = https://github.com/jaecktec/docker-freecad.git
