--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ requires-python = ">=3.11.0,<3.12"
 license = "Apache-2.0"
 keywords = []
 authors = [{ name = "Martin Slabber", email = "martin@tsolo.io" }]
+maintainers = [{ name = "Martin Slabber", email = "martin@tsolo.io" }]
 classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: Implementation :: CPython",
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = []
 
@@ -32,25 +33,16 @@ Source = "https://github.com/Martin Slabber/cycax-freecad-worker"
 path = "src/cycax_freecad_worker/__about__.py"
 
 [tool.hatch.envs.default]
-dependencies = [
-  "python-multipart",
-  "duckdb==1.1.3",
-  "duckdb-engine",
-  'sqlmodel',
-  "pydantic-settings==2.7.0",
-  "uvicorn[standard]==0.34.0",
-  "fastapi[standard]==0.115.6",
-  "prometheus_fastapi_instrumentator==7.0.0",
-]
+dependencies = ["pydantic-settings==2.10.1"]
 [tool.hatch.envs.types]
-extra-dependencies = ["mypy>=1.0.0"]
+extra-dependencies = ["mypy==1.11.2"]
 [tool.hatch.envs.types.scripts]
 check = "mypy --install-types --non-interactive {args:src/cycax_freecad_worker tests}"
 [tool.hatch.envs.docs]
 dependencies = [ # Use the latest documentation tools.
-  "mkdocs",
-  "mkdocs-material",
-  "mkdocstrings[python]",
+    "mkdocs==1.6.1",
+    "mkdocs-material==9.6.14",
+    "mkdocstrings[python]==0.29.1",
 ]
 
 [tool.hatch.envs.docs.scripts]
@@ -60,16 +52,15 @@ serve = "mkdocs serve --dev-addr 0.0.0.0:8005"
 [tool.hatch.envs.lint]
 detached = true
 dependencies = [ # Use the latest linter and code checking tools.
-  "black>=24.8.0",
-  "mypy>=1.11.2",
-  "ruff>=0.6.0",
-  "typos>=1.24.1",
+    "mypy==1.16.1",
+    "ruff==0.12.0",
+    "typos==1.33.1",
 ]
 [tool.hatch.envs.lint.scripts]
 typing = "mypy --install-types --non-interactive {args:src/cycax_freecad_worker tests}"
-style = ["ruff check {args:.}", "black --check --diff {args:.}"]
+style = ["ruff check {args:.}"]
 spell = "typos --exclude='**/*.svg' --exclude='**/*.css' --exclude='**/*.png' --exclude='**/*.json' --exclude='docs/site' {args:.}"
-fmt = ["black {args:.}", "ruff check --fix {args:.}", "style"]
+fmt = ["ruff format {args:.}", "ruff check --fix {args:.}", "style"]
 all = ["style", "typing"]
 
 [tool.typos.default.extend-words]
@@ -84,50 +75,50 @@ skip-string-normalization = true
 target-version = "py311"
 line-length = 120
 lint.select = [
-  "A",
-  "ARG",
-  "B",
-  "C",
-  "DTZ",
-  "E",
-  "EM",
-  "F",
-  "FBT",
-  "I",
-  "ICN",
-  "ISC",
-  "N",
-  "PLC",
-  "PLE",
-  "PLR",
-  "PLW",
-  "Q",
-  "RUF",
-  "S",
-  "T",
-  "TID",
-  "UP",
-  "W",
-  "YTT",
+    "A",
+    "ARG",
+    "B",
+    "C",
+    "DTZ",
+    "E",
+    "EM",
+    "F",
+    "FBT",
+    "I",
+    "ICN",
+    "ISC",
+    "N",
+    "PLC",
+    "PLE",
+    "PLR",
+    "PLW",
+    "Q",
+    "RUF",
+    "S",
+    "T",
+    "TID",
+    "UP",
+    "W",
+    "YTT",
 ]
 lint.ignore = [
-  # Allow non-abstract empty methods in abstract base classes
-  "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
-  # Ignore checks for possible passwords
-  "S105",
-  "S106",
-  "S107",
-  # Ignore complexity
-  "C901",
-  "PLR0911",
-  "PLR0912",
-  "PLR0913",
-  "PLR0915",
+    # Allow non-abstract empty methods in abstract base classes
+    "B027",
+    # Allow boolean positional values in function calls, like `dict.get(... True)`
+    "FBT003",
+    # Ignore checks for possible passwords
+    "S105",
+    "S106",
+    "S107",
+    # Ignore complexity
+    "C901",
+    "PLR0911",
+    "PLR0912",
+    "PLR0913",
+    "PLR0915",
 ]
 lint.unfixable = [
-  #"F401", # Don't touch unused imports
+    #"F401", # Don't touch unused imports
 ]
 
 [tool.ruff.lint.isort]
@@ -146,10 +137,10 @@ extra-dependencies = ["coverage[toml]>=6.5", "pytest>=8.3.2"]
 test = "pytest {args:tests}"
 test-cov = "coverage run -m pytest {args:tests}"
 cov-report = [
-  "- coverage combine",
-  "coverage report",
-  "coverage json -o reports/coverage/coverage.json",
-  "coverage html -d reports/coverage",
+    "- coverage combine",
+    "coverage report",
+    "coverage json -o reports/coverage/coverage.json",
+    "coverage html -d reports/coverage",
 ]
 cov = ["test-cov", "cov-report"]
 
@@ -161,8 +152,8 @@ omit = ["src/cycax_freecad_worker/__about__.py"]
 
 [tool.coverage.paths]
 cycax_freecad_worker = [
-  "src/cycax_freecad_worker",
-  "*/cycax_freecad_worker/src/cycax_freecad_worker",
+    "src/cycax_freecad_worker",
+    "*/cycax_freecad_worker/src/cycax_freecad_worker",
 ]
 tests = ["tests", "*/cycax_freecad_worker/tests"]
 
